StarSpan ChangeLog
$Id$

2008-01-25
	- Add processing of rasters according to associated masks.
	  Some masks:
	  	/delta/raster/hymap/base/ref1_geo3/200406/mask_edge
	  
	  

2008-01-24 (1.0.06)
	- First tests on --duplicate_pixel
	- Dev note: layer->ResetReading() call in traverse()
	  New static flag: bool _resetReading in class Traverser:
	    By default, traverse() starts by calling ResetReading on the layer
	    (_resetReading == true).
	    However, this is in general not appropriate because it precludes the
	    traversal from being used as a subtask. 
	    For example, in starspan_csv_dup_pixel, all features are processed
	    but the extraction from each one is done with a corresponding traversal.
	    As a quick fix to allow for this behavior at least for specific commands,
	    this global (static) flag can be used to instruct the traversal not
	    to call ResetReading on the layer.

     - Fixed some memory errors and leaks -- thanks valgrind, again!
		

2008-01-16 (1.0.06)
	- FR #350112: Duplicate pixel handling -- starting implementation.
	See discussion: http://starspan.casil.ucdavis.edu/doku/doku.php?id=fr_350112
	
	
	
	
	
2007-12-14 (1.0.05)
	- FR #200332: Added --delimiter option, now used in:
	    function                           command
	    -------------------                ------------
	    starspan_csv                       --csv
	    starspan_stats                     --stats
	    starspan_update_csv                --update-csv
	    starspan_getCountByClassObserver   --count-by-class
	    
	  In --update-csv, the given delimiter is used for reading in the given 
	  input CSV file and to generate the new CSV file. 
	
2007-12-10 (1.0.04)
	- Changes to compile StarSpan against GEOS 3.x.x
	  See GEOS_VERSION_MAJOR-conditioned code in:
	  	traverser.h, traverser.cc
	  Other various changes consisted in dropping the geos::* namespace,
	  which is now handled in traverser.h
	  